Updated CSS for tablet version: fixed .presentation targeting, improved layout in the intro section for larger screens, and adjusted padding for better readability.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
 
 // Importation du header
 @import 'components/header';
+@import 'components/footer';
 @import 'pages/home.scss';
 
 
@@ -92,7 +93,7 @@
 html,
 body {
   max-width: 100vw;
-  max-height: 100vh;
+  height: 100vh;
   overflow-x: hidden;
 }
 
